display species on sample pairing for chipseq